<resources>
    <string name="app_name">Limitly</string>

    <!--welcome screen-->
    <string name="logoDec">logo</string>
    <string name="humanImgDec">human</string>
    <string name="welcomeTxt">Take control of your screen time &amp; boost your focus! </string>
    <string name="welcomeBtnTxt">Let`s Focused!</string>

    <!--login screen-->
    <string name="loginTitle">Login</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginBtnTxt">Login</string>
    <string name="forgotPwTxt">Forgot password?</string>
    <string name="newAccQ">Don`t have an account?</string>
    <string name="signup">Sign up</string>

    <!--signup screen-->
    <string name="signupTitle">Signup</string>
    <string name="signupBtnTxt">Signup</string>
    <string name="haveAccQ">Have an account?</string>
    <string name="login">Login</string>

    <!--navbar icon titles-->
    <string name="homeIconTitle">Home</string>
    <string name="appsIconTitle">Apps</string>
    <string name="settingsIconTitle">Settings</string>

    <!--home screen-->
    <string name="homeTitle">Home</string>
    <string name="blockedAppsTitle">Today Blocked Apps</string>
    <string name="modesTitle">Limitly Modes</string>
    <string name="timerModeIconDes">timerModeIcon</string>
    <string name="timerModeName">Timer Mode</string>
    <string name="focusModeIconDes">focusModeIcon</string>
    <string name="focusModeName">Focus Mode</string>
    <string name="focusModeDes">Block apps in focus zones</string>
    <string name="studyModeIconDes">studyModeIcon</string>
    <string name="studyModeName">Study Mode</string>
    <string name="studyModeDes">Block apps when face down</string>
    <string name="sleepModeIconDes">sleepModeIcon</string>
    <string name="sleepModeName">Sleep Mode</string>
    <string name="sleepModeDes">Block apps in sleeping time</string>

    <!--apps screen-->
    <string name="appsTitle">Apps</string>
    <string name="appIconDes">appIcon</string>

    <!--settings screen-->
    <string name="settingsTitle">Settings</string>
    <string name="setBlockIns">Set block time</string>
    <string name="setUnblockIns">Set unblock time</string>
    <string name="allZones">View Selected Focus Zones</string>
    <string name="studyModeInfo">Block apps when face down after 10 sec</string>
    <string name="setSleepTimeIns">Set sleep time</string>
    <string name="setWakeIns">Set wake up time</string>
    <string name="logoutBtnTxt">Sign out</string>

    <!--add zone screen-->
    <string name="addZoneTitle">Add Focus Zone</string>
    <string name="backIconDes">backIconDes</string>
    <string name="addIconDes">addIconDes</string>
    <string name="addZoneHint">Find safe zone</string>
    <string name="GoogleMapAPI">AIzaSyCLuZt71b24YIGkN4mpQPZA5ZxAQzF0FUM</string>
    <string name="addZoneBtnTxt">Search</string>
    <string name="removeIconDes">removeIconDes</string>

    <!--selected zones screen-->
    <string name="selectedZonesTitle">Focus Zones</string>

    <!--forgot password screen-->
    <string name="forgotPwTitle">Forgot Password</string>
    <string name="forgotPwUsernameHint">Enter your username</string>
    <string name="forgotPwBtnTxt">Change</string>

    <!--change password screen-->
    <string name="changePwTitle">Change Password</string>
    <string name="newPwHint">Enter new password</string>
    <string name="submitPwBtnTxt">Submit</string>

    <!--block overlay screen-->
    <string name="blockedBy">App Blocked By</string>
    <string name="quote">“Less scrolling, more living.”</string>
    <string name="cllToAction">Lets focused your works!</string>
    <string name="exitBtnTxt">Exit</string>
</resources>